name:                gelatin-webgl
version:             0.1.0.0
synopsis:            Gelatin's WebGL renderer.
description:         Gelatin's WebGL renderer. Please see README.md
homepage:            https://github.com/schell/gelatin-webgl#readme
license:             BSD3
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
copyright:           Schell Scivally
category:            Web, Graphics
build-type:          Simple
cabal-version:       >=1.18
stability:           experimental

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Gelatin.WebGL
                     , Gelatin.WebGL.Common
                     , Gelatin.WebGL.Shaders
                     , Gelatin.WebGL.Renderer

  build-depends:       base >= 4.8 && < 4.11
                     , gelatin >= 0.1 && < 0.2
                     , gelatin-shaders >= 0.1 && < 0.2
                     , ghcjs-base -any
                     , ghcjs-dom  -any
                     , ghcjs-dom-jsffi
                     , mtl >= 2.2 & < 2.3
                     , async -any
                     , vector >= 0.12 && < 0.13
                     , bytestring >= 0.10 & < 0.11
                     , stm -any
                     , transformers >= 0.4 && < 0.6

  default-language:    Haskell2010

executable gelatin-webgl-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.8 && <4.11
                     , gelatin
                     , gelatin-webgl
                     , gelatin-shaders
                     , ghcjs-base
                     , ghcjs-dom
                     , ghcjs-dom-jsffi
                     , transformers
                     , either
                     , async
                     , vector
                     , stm
                     , transformers
                     , bytestring

  default-language:    Haskell2010

test-suite gelatin-webgl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.8 && <4.11
                     , gelatin-webgl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/schell/gelatin-webgl
