name:                gelatin
version:             0.0.0.1
synopsis:            A graphics description language.
description:         An EDSL for describing pictures and scenes.
homepage:            https://github.com/schell/gelatin
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
category:            Graphics
build-type:          Simple

cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Gelatin.Core.Bezier
                     , Gelatin.Core.Bounds
                     , Gelatin.Core.Color
                     , Gelatin.Core.Font
                     , Gelatin.Core.Polyline
                     , Gelatin.Core.Stroke
                     , Gelatin.Core.Transform
                     , Gelatin.Core.Triangle
                     , Gelatin.Core.Utils
                     , Gelatin.Picture.Internal
                     , Gelatin.Picture.Shapes
                     , Gelatin.Core
                     , Gelatin.Compiler
                     , Gelatin.Picture
                     , Gelatin

  build-depends:       base         >=4.6 && <4.11
                     , linear
                     , containers
                     , vector
                     , mtl
                     , transformers
                     , bytestring
                     , lens

  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  ghc-options:         -Wall

  build-depends:       base >= 4.6 && <4.11
                     , gelatin
                     , linear
                     --, halive
                     , vector
                     , mtl

  hs-source-dirs:      app
  main-is:             Example.hs
  default-language:    Haskell2010
