name:                gelatin
version:             0.0.0.1
synopsis:            A graphics description language.
description:         An EDSL for describing pictures and scenes.
homepage:            https://github.com/schell/gelatin
license:             MIT
license-file:        LICENSE
author:              Schell Scivally
maintainer:          schell@zyghost.com
category:            Graphics
build-type:          Simple

cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Gelatin.Core.Bezier
                     , Gelatin.Core.Bounds
                     , Gelatin.Core.Color
                     , Gelatin.Core.Font
                     , Gelatin.Core.Polyline
                     , Gelatin.Core.Stroke
                     , Gelatin.Core.Transform
                     , Gelatin.Core.Triangle
                     , Gelatin.Core.Utils
                     , Gelatin.Picture.Internal
                     , Gelatin.Picture.Shapes
                     , Gelatin.Core
                     , Gelatin.Compiler
                     , Gelatin.Picture
                     , Gelatin

  build-depends:       base                  >=4.8 && <4.11
                     , linear                >=1.20 && <1.21
                     , containers            >=0.5 && <0.6
                     , vector                >=0.12 && <0.13
                     , mtl                   >=2.2 && <2.3
                     , transformers          >=0.4 && <0.6
                     , bytestring            >=0.10 && <0.11
                     , lens                  >=4.15 && <4.16

  hs-source-dirs:      src
  default-language:    Haskell2010

executable example
  ghc-options:         -Wall

  build-depends:       base                  >=4.8 && <4.11
                     , gelatin
                     , linear                >=1.20 && <1.21
                     , vector                >=0.12 && <0.13
                     , mtl                   >=2.2 && <2.3

  hs-source-dirs:      app
  main-is:             Example.hs
  default-language:    Haskell2010
